syntax = "proto3";

package playhouse.benchmark.ss;

option csharp_namespace = "PlayHouse.Benchmark.SS.Shared.Proto";

// ============================================
// Server-to-Server Benchmark Messages
// ============================================

// Stage 생성 요청 (HTTP 클라이언트 → API Server)
message CreateStageRequest {
    string play_nid = 1;
    string stage_type = 2;
    int64 stage_id = 3;
}

// Stage 생성 응답 (API Server → HTTP 클라이언트)
message CreateStageReply {
    bool success = 1;
    int32 error_code = 2;
    int64 stage_id = 3;
    string play_nid = 4;
    string error_message = 5;
}

// ============================================
// Server-to-Server Communication
// ============================================

// 서버 간 호출 유형
enum SSCallType {
    STAGE_TO_API = 0;
    STAGE_TO_STAGE = 1;
    API_TO_API = 2;
}

// 통신 모드
enum SSCommMode {
    REQUEST_ASYNC = 0;
    REQUEST_CALLBACK = 1;
    SEND = 2;
}

// ============================================
// Echo Messages
// ============================================

// 단순 Echo 메시지
message SSEchoRequest {
    bytes payload = 1;
}

message SSEchoReply {
    bytes payload = 1;
}

// 클라이언트 → Stage 트리거 메시지 (Echo용)
message TriggerSSEchoRequest {
    int32 sequence = 1;
    bytes payload = 2;
    SSCommMode comm_mode = 3;
    SSCallType call_type = 4;  // STAGE_TO_API or STAGE_TO_STAGE
    string target_nid = 5;      // Stage→Stage용
    int64 target_stage_id = 6;  // Stage→Stage용
}

message TriggerSSEchoReply {
    int32 sequence = 1;
    bytes payload = 2;
}
